--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -44,7 +44,8 @@
     "proposal": "propuesta"
   },
   "derivation_path": {
-    "invalid": "El derivation path es incorrecto. Debe seguir el siguiente patrón 44'/60|61'/x'/n"
+    "invalid":
+      "El derivation path es incorrecto. Debe seguir el siguiente patrón 44'/60|61'/x'/n"
   },
   "footer": {
     "color_key": "Mapa de Colores",
@@ -116,7 +117,8 @@
     "buy_mana": "{click_here} para comprar MANA.",
     "didnt_approve": "No has autorizado el uso de MANA",
     "needs_at_least": "Necesitas por lo menos {mana} para comprar esta LAND.",
-    "please_approve": "Por favor entra en {settings_link} y permite al contrato de Mercado a operar MANA por tu cuenta",
+    "please_approve":
+      "Por favor entra en {settings_link} y permite al contrato de Mercado a operar MANA por tu cuenta",
     "total_balance": "Tu balance es {balance}"
   },
   "parcel_cancel": {
@@ -174,28 +176,35 @@
     "expiration": "Expiración",
     "expiration_placeholder": "Fecha de expiración para esta publicación",
     "list_land": "Publicar LAND para la venta",
-    "please_authorize": "Tienes que ir a {settings_link} y autorizar al Mercado para operar LAND por tu cuenta antes de publicarla en venta.",
+    "please_authorize":
+      "Tienes que ir a {settings_link} y autorizar al Mercado para operar LAND por tu cuenta antes de publicarla en venta.",
     "price": "Precio",
     "price_placeholder": "Precio en MANA para esta LAND",
-    "set_land_price": "Configura un precio y fecha de expiración para {parcel_name}"
+    "set_land_price":
+      "Configura un precio y fecha de expiración para {parcel_name}"
   },
   "parcel_tags": {
     "adjacent": "Adyacente",
     "district": "Distrito",
     "plaza": "Plaza",
-    "proximity": "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia",
+    "proximity":
+      "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia",
     "road": "Camino"
   },
   "parcel_transfer": {
     "about_to_transfer": "Estas por transferir {parcel_name}",
-    "cant_transfer": "Esta LAND no puede ser transferida porque se encuentra en venta.",
+    "cant_transfer":
+      "Esta LAND no puede ser transferida porque se encuentra en venta.",
     "check_address": "Por favor revisa la dirección cuidadosamente",
-    "error_persists": "Si el problema persiste, contáctate con nosotros en {community_chat_link}",
-    "irreversible": "Recuerda que transferir LAND es una operación irreversible.",
+    "error_persists":
+      "Si el problema persiste, contáctate con nosotros en {community_chat_link}",
+    "irreversible":
+      "Recuerda que transferir LAND es una operación irreversible.",
     "placeholder": "Ejemplo: {address}",
     "recipient_address": "Dirección de destino",
     "transfer_land": "Transferir LAND",
-    "unknown_error": "Un problema desconocido ha ocurrido, los detalles se encuentran debajo."
+    "unknown_error":
+      "Un problema desconocido ha ocurrido, los detalles se encuentran debajo."
   },
   "profile_page": {
     "empty": "El usuario no tiene {content}",
@@ -211,30 +220,43 @@
     "view": "Ver"
   },
   "settings": {
-    "approve_mana": "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "approve_mana_check": "Marcando autoriza el uso de MANA al contrato de Mercado",
+    "approve_mana":
+      "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "approve_mana_check":
+      "Marcando autoriza el uso de MANA al contrato de Mercado",
     "authorization": "Autorización",
-    "authorize": "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "authorize_land_check": "Marcando autoriza el uso de LAND al contrato de Mercado",
-    "disapprove_mana_check": "Desmarcando desautoriza el uso de MANA al contrato de Mercado",
-    "mana_approved": "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "authorize":
+      "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "authorize_land_check":
+      "Marcando autoriza el uso de LAND al contrato de Mercado",
+    "disapprove_mana_check":
+      "Desmarcando desautoriza el uso de MANA al contrato de Mercado",
+    "mana_approved":
+      "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
     "marketplace_contract": "Contrato de Mercado",
     "pending_tx": "Tienes una transacción pendiente",
-    "unauthorize_land_check": "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
-    "you_authorized": "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta"
+    "unauthorize_land_check":
+      "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
+    "you_authorized":
+      "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta"
   },
   "sign_in": {
     "account_unlocked": "Revisa que tu cuenta esté desbloqueada.",
-    "options": "En primer lugar tienes que buscar un lugar seguro para guardar tu LAND. Puedes usar la extensión {metamask_link} o una billetera física como {ledger_nano_link}."
+    "options":
+      "En primer lugar tienes que buscar un lugar seguro para guardar tu LAND. Puedes usar la extensión {metamask_link} o una billetera física como {ledger_nano_link}."
   },
   "transaction": {
-    "approved": "Has autorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
-    "authorize": "Has {action} al {marketplace_contract_link} para operar LAND por tu cuenta.",
+    "approved":
+      "Has autorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
+    "authorize":
+      "Has {action} al {marketplace_contract_link} para operar LAND por tu cuenta.",
     "buy": "Has comprado {parcel_link}",
     "buy_mana": "Has comprado {mana} MANA",
     "cancel": "Has cancelado {publication_link} de {parcel_link}",
-    "disapproved": "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
-    "edit": "Has editado {parcel_link} con el nombre \"{name}\" y la descripción \"{description}\"",
+    "disapproved":
+      "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
+    "edit":
+      "Has editado {parcel_link} con el nombre \"{name}\" y la descripción \"{description}\"",
     "publish": "Has publicado {parcel_link}",
     "transfer": "Has transferido {parcel_link} a {owner_link}",
     "transfer_mana": "Has transferido {mana} MANA a {address_link}"
@@ -244,18 +266,22 @@
       "please_confirm": "Por favor confirma la transacción"
     },
     "parcel": {
-      "still_pending": "{parcel_name} todavía tiene {transactions_count} {transactions_count, plural, one {transacción pendiente} other {transacciones pendientes}}."
+      "still_pending":
+        "{parcel_name} todavía tiene {transactions_count} {transactions_count, plural, one {transacción pendiente} other {transacciones pendientes}}."
     },
-    "see_activity": "Para ver el historial de transacciones, visita tu {activity_link}.",
+    "see_activity":
+      "Para ver el historial de transacciones, visita tu {activity_link}.",
     "text": {
-      "failed": "Tu transacción ha fallado, puedes intentar enviándola nuevamente.",
+      "failed":
+        "Tu transacción ha fallado, puedes intentar enviándola nuevamente.",
       "pending": "Tu transacción está esperando ser confirmada."
     }
   },
   "transfer_mana": {
     "action": "Transferir",
     "current_balance": "Tu balance actual es {balance}",
-    "irreversible": "Recuerda que transferir MANA es una operación irreversible.",
+    "irreversible":
+      "Recuerda que transferir MANA es una operación irreversible.",
     "own_address_warning": "Esa es tu propia dirección!",
     "title": "Transferir MANA"
   }
