--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -44,7 +44,8 @@
     "proposal": "proposal"
   },
   "derivation_path": {
-    "invalid": "You have set a wrong derivation path for your wallet. Your derivation path must follow pattern 44'/60|61'/x'/n"
+    "invalid":
+      "You have set a wrong derivation path for your wallet. Your derivation path must follow pattern 44'/60|61'/x'/n"
   },
   "footer": {
     "color_key": "Color Key",
@@ -116,7 +117,8 @@
     "buy_mana": "{click_here} to buy some MANA.",
     "didnt_approve": "You haven't authorized MANA usage",
     "needs_at_least": "You need at least {mana} in order to buy this LAND.",
-    "please_approve": "Please go to {settings_link} and allow the Marketplace contract to operate MANA on your behalf",
+    "please_approve":
+      "Please go to {settings_link} and allow the Marketplace contract to operate MANA on your behalf",
     "total_balance": "Your balance is {balance}"
   },
   "parcel_cancel": {
@@ -174,7 +176,8 @@
     "expiration": "Expiration",
     "expiration_placeholder": "Expiration date for this publication",
     "list_land": "List LAND for sale",
-    "please_authorize": "You need to go to {settings_link} and authorize the Marketplace to operate LAND on your behalf before you can list it on sale.",
+    "please_authorize":
+      "You need to go to {settings_link} and authorize the Marketplace to operate LAND on your behalf before you can list it on sale.",
     "price": "Price",
     "price_placeholder": "Price in MANA for this LAND",
     "set_land_price": "Set a price and an expiration date for {parcel_name}."
@@ -183,15 +186,18 @@
     "adjacent": "Adjacent",
     "district": "District",
     "plaza": "Plaza",
-    "proximity": "{distance} {distance, plural, one {parcel} other {parcels}} away",
+    "proximity":
+      "{distance} {distance, plural, one {parcel} other {parcels}} away",
     "road": "Road"
   },
   "parcel_transfer": {
     "about_to_transfer": "You're about to transfer {parcel_name}.",
     "cant_transfer": "This LAND can't be transferred because it's on sale.",
     "check_address": "Please check the address carefully",
-    "error_persists": "If the problem persists, contact us at our {community_chat_link}",
-    "irreversible": "Remember that transferring LAND is an irreversible operation.",
+    "error_persists":
+      "If the problem persists, contact us at our {community_chat_link}",
+    "irreversible":
+      "Remember that transferring LAND is an irreversible operation.",
     "placeholder": "Example: {address}",
     "recipient_address": "Recipient address",
     "transfer_land": "Transfer LAND",
@@ -211,30 +217,43 @@
     "view": "View"
   },
   "settings": {
-    "approve_mana": "Authorize the {marketplace_contract_link} to operate MANA on your behalf",
-    "approve_mana_check": "Checking authorizes MANA usage to the Marketplace contract",
+    "approve_mana":
+      "Authorize the {marketplace_contract_link} to operate MANA on your behalf",
+    "approve_mana_check":
+      "Checking authorizes MANA usage to the Marketplace contract",
     "authorization": "Authorization",
-    "authorize": "Authorize the {marketplace_contract_link} to operate LAND on your behalf",
-    "authorize_land_check": "Checking authorizes LAND usage to the Marketplace contract",
-    "disapprove_mana_check": "Unchecking unauthorizes MANA usage for the Marketplace contract",
-    "mana_approved": "You have authorized the {marketplace_contract_link} to operate MANA on your behalf",
+    "authorize":
+      "Authorize the {marketplace_contract_link} to operate LAND on your behalf",
+    "authorize_land_check":
+      "Checking authorizes LAND usage to the Marketplace contract",
+    "disapprove_mana_check":
+      "Unchecking unauthorizes MANA usage for the Marketplace contract",
+    "mana_approved":
+      "You have authorized the {marketplace_contract_link} to operate MANA on your behalf",
     "marketplace_contract": "Marketplace contract",
     "pending_tx": "You have a pending transaction",
-    "unauthorize_land_check": "Unchecking unauthorizes LAND usage for the Marketplace contract",
-    "you_authorized": "You have authorized the {marketplace_contract_link} to operate LAND on your behalf"
+    "unauthorize_land_check":
+      "Unchecking unauthorizes LAND usage for the Marketplace contract",
+    "you_authorized":
+      "You have authorized the {marketplace_contract_link} to operate LAND on your behalf"
   },
   "sign_in": {
     "account_unlocked": "Make sure your account is unlocked",
-    "options": "First off you’ll need a safe place to keep all your land. You can use the {metamask_link} extension or a hardware wallet like {ledger_nano_link}."
+    "options":
+      "First off you’ll need a safe place to keep all your land. You can use the {metamask_link} extension or a hardware wallet like {ledger_nano_link}."
   },
   "transaction": {
-    "approved": "You authorized the {marketplace_contract_link} to operate MANA on your behalf",
-    "authorize": "You {action} the {marketplace_contract_link} to operate LAND on your behalf",
+    "approved":
+      "You authorized the {marketplace_contract_link} to operate MANA on your behalf",
+    "authorize":
+      "You {action} the {marketplace_contract_link} to operate LAND on your behalf",
     "buy": "You bought {parcel_link}",
     "buy_mana": "You bought {mana} MANA",
     "cancel": "You cancelled the {publication_link} on {parcel_link}",
-    "disapproved": "You unauthorized the {marketplace_contract_link} to operate MANA on your behalf",
-    "edit": "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
+    "disapproved":
+      "You unauthorized the {marketplace_contract_link} to operate MANA on your behalf",
+    "edit":
+      "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
     "publish": "You published {parcel_link}",
     "transfer": "You transfered {parcel_link} to {owner_link}",
     "transfer_mana": "You transfered {mana} MANA to {address_link}"
@@ -244,9 +263,11 @@
       "please_confirm": "Please confirm the transaction"
     },
     "parcel": {
-      "still_pending": "{parcel_name} still has {transactions_count} pending {transactions_count, plural, one {transaction} other {transactions}}"
+      "still_pending":
+        "{parcel_name} still has {transactions_count} pending {transactions_count, plural, one {transaction} other {transactions}}"
     },
-    "see_activity": "To see your transaction history, visit your {activity_link}.",
+    "see_activity":
+      "To see your transaction history, visit your {activity_link}.",
     "text": {
       "failed": "Your transaction failed, you can try sending a new one.",
       "pending": "The transaction is waiting to be confirmed."
@@ -255,7 +276,8 @@
   "transfer_mana": {
     "action": "Transfer",
     "current_balance": "Your current balance is {balance}",
-    "irreversible": "Remember that transferring MANA is an irreversible operation.",
+    "irreversible":
+      "Remember that transferring MANA is an irreversible operation.",
     "own_address_warning": "That's your own address!",
     "title": "Transfer MANA"
   }
