--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -44,7 +44,8 @@
     "proposal": "提案"
   },
   "derivation_path": {
-    "invalid": "您为钱包设置了错误的派生路径。 你的派生路径必须遵循模式 44'/60|61'/x'/n"
+    "invalid":
+      "您为钱包设置了错误的派生路径。 你的派生路径必须遵循模式 44'/60|61'/x'/n"
   },
   "footer": {
     "color_key": "色彩标记",
@@ -116,7 +117,8 @@
     "buy_mana": "{click_here}购买一些MANA。",
     "didnt_approve": "您没有批准使用MANA",
     "needs_at_least": "为了购买这块土地，您至少需要{value}MANA。",
-    "please_approve": "请前往{settings_link}，让Marketplace合约以您的名义操作MANA",
+    "please_approve":
+      "请前往{settings_link}，让Marketplace合约以您的名义操作MANA",
     "total_balance": "您的余额是{balance}"
   },
   "parcel_cancel": {
@@ -174,7 +176,8 @@
     "expiration": "到期时间",
     "expiration_placeholder": "此块上架待售土地的到期时间",
     "list_land": "待售虚拟土地上架",
-    "please_authorize": "您需要前往设置页面{settings_link}并授权虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
+    "please_authorize":
+      "您需要前往设置页面{settings_link}并授权虚拟市场以您的名义操作土地交易，然后才能将其上架出售。",
     "price": "价格",
     "price_placeholder": "此虚拟地块以MANA结算的价格",
     "set_land_price": "为{parcel_name}设置价格和到期日期"
@@ -190,7 +193,8 @@
     "about_to_transfer": "您即将转让{parcel_name}",
     "cant_transfer": "这块土地正在出售中，不能转让。",
     "check_address": "请仔细检查地址",
-    "error_persists": "如果问题仍然存在，请通过我们的{community_chat_link}与我们联系",
+    "error_persists":
+      "如果问题仍然存在，请通过我们的{community_chat_link}与我们联系",
     "irreversible": "请注意，转让土地操作是不可逆的。",
     "placeholder": "例: {address}",
     "recipient_address": "接收者地址",
@@ -225,7 +229,8 @@
   },
   "sign_in": {
     "account_unlocked": "确保您的帐户已解锁",
-    "options": "首先，你需要一个安全的地方来保存你的土地。您可以使用{metamask_link}扩展程序或像{ledger_nano_link}这样的硬件钱包。"
+    "options":
+      "首先，你需要一个安全的地方来保存你的土地。您可以使用{metamask_link}扩展程序或像{ledger_nano_link}这样的硬件钱包。"
   },
   "transaction": {
     "approved": "您授权{marketplace_contract_link}以您的名义操作MANA",
@@ -234,7 +239,8 @@
     "buy_mana": "你已经买了{MANA} MANA",
     "cancel": "您取消了{parcel_link}上的{publication_link}",
     "disapproved": "您未经授权{marketplace_contract_link}以您的名义操作MANA",
-    "edit": "您已为{parcel_link}地块编辑了名称\"{name}\"和描述\"{description}\"",
+    "edit":
+      "您已为{parcel_link}地块编辑了名称\"{name}\"和描述\"{description}\"",
     "publish": "您发布了{parcel_link}地块",
     "transfer": "您已将{parcel_link}转让给{owner_link}",
     "transfer_mana": "您将{mana}个MANA转移到{address_link}"
